--- a/myapp/templates/login.html
+++ b/myapp/templates/login.html
@@ -37,8 +37,9 @@
                     <input type="email" class="form-control" placeholder="enter college mail" name="emailid">
             <label>Password</label>
                     <input type="password" class="form-control"placeholder="enter password" name="pwd">
-                    <input type="submit" class="btn btn-danger mt-3" value="Sign In">
-            </form>
+                    <input type="submit" class="btn btn-danger mt-3" value="Sign In"><br>
+                    <a href="{%url 'Forgot_Password'%}" class="btn btn-danger text-center mt-5">Forgot your login details?</a>
+                </form>
         </div>
         
     </div>
